--- a/styles/global.css
+++ b/styles/global.css
@@ -22,15 +22,15 @@
 
   --text-title: #F8FBFB;
   --text-body: #E2E7E9;
-  --text-label: #BAC6C9;
+  --text-label: #bac6c9;
 
 
   --ff-raleway: "Raleway", sans-serif;
 
-  --title-lg: 800 3rem/auto var(--ff-raleway);
-  --title-md: 800 2.5rem/auto var(--ff-raleway); 
-  --title-sm: 800 2rem/auto var(--ff-raleway); 
-  --title-xs: 800 1rem/auto var(--ff-raleway); 
+  --title-lg: 800 3rem var(--ff-raleway);
+  --title-md: 800 2.5rem var(--ff-raleway); 
+  --title-sm: 800 2rem var(--ff-raleway); 
+  --title-xs: 800 1rem var(--ff-raleway); 
 
   --subtitle: 500 2rem/2 var(--ff-raleway); 
 
@@ -39,9 +39,21 @@
   --body-sm: 700 0.875rem/1.4 var(--ff-raleway); 
   --body-xs: 700 0.75rem/1.4 var(--ff-raleway); 
 
-  --button: 800 0.875rem/auto var(--ff-raleway); 
-  --link: 500 0.875rem/auto var(--ff-raleway); 
-  --tag: 800 0.625rem/auto var(--ff-raleway); 
+  --button: 800 0.875rem var(--ff-raleway); 
+  --link: 500 0.875rem var(--ff-raleway); 
+  --tag: 800 0.625rem var(--ff-raleway); 
 
+  --px-lg: 1.25rem;
 
+}
+
+body{
+  background-color: var(--shape-background);
+  color: var(--text-body);
+}
+
+@media (width >= 70em){
+  :root{
+    --px-lg: 10rem;
+  }
 }
