--- a/styles/index.css
+++ b/styles/index.css
@@ -1,1 +1,5 @@
 @import url(global.css);
+@import url(utility.css);
+@import url(header.css);
+@import url(promo-section.css);
+@import url(kit-section.css);
