--- a/styles/kit-section.css
+++ b/styles/kit-section.css
@@ -59,7 +59,9 @@
   position: absolute;
   inset: 0;
   z-index: 9;
-  transform: translate(116px, -37px);
+  margin-left: 50px;
+  margin-top: 10px;
+  transform: translate(66px, -47px);
   rotate: 14deg;
 }
 
@@ -68,7 +70,9 @@
   position: absolute;
   inset: 0;
   z-index: 8;
-  transform: translate(150px,-46px);
+  margin-left: 50px;
+  margin-top: 10px;
+  transform: translate(100px,-56px);
   rotate: 22deg;
 }
 
@@ -77,6 +81,8 @@
   position: absolute;
   inset: 0;
   z-index: 9;
-  transform: translate(-62px,132px);
+  margin-left: 50px;
+  margin-top: 10px;
+  transform: translate(-112px,122px);
   rotate: -7deg;
 }
