--- a/styles/global.css
+++ b/styles/global.css
@@ -31,6 +31,7 @@
   --title-md: 800 2.5rem var(--ff-raleway); 
   --title-sm: 800 2rem var(--ff-raleway); 
   --title-xs: 800 1rem var(--ff-raleway); 
+  --title-sx: 700 1rem var(--ff-raleway); 
 
   --subtitle: 500 2rem/2 var(--ff-raleway); 
 
